# django-anymail-history

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: coverage.yml  lint.yml  release.yml  test.yml  tox.yml  upgrade_precommit.yml
anymail_history/: __init__.py  admin.py  apps.py  message.py  models.py  receivers.py  utils.py
anymail_history/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20221207_2316.py
sample_app/: settings.py
sample_project/: settings.py  urls.py
sample_project/users/: admin.py  apps.py  models.py
sample_project/users/migrations/: 0001_initial.py
tests/: settings.py  test_admin.py  test_message.py  test_receivers.py  test_utils.py
